Refactor a large portion of NMS support